--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,14 @@
     <artifactId>etiqet-example</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <name>Etiqet Sample Project</name>
+
+	<properties>
+	  <maven.compiler.target>1.8</maven.compiler.target>
+	  <maven.compiler.source>1.8</maven.compiler.source>
+	  <log.version>2.9.1</log.version>
+	</properties>
+
     <dependencies>
         <dependency>
             <groupId>com.neueda.etiqet</groupId>
